services/node-service/k8s/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-service-ingress
  namespace: ""
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /node-service-prod
            pathType: Prefix
            backend:
              service:
                name: node-service
                port:
                  number: 80
